<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textview_main_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/main_title"
        android:textColor="@color/material_grey_800"
        android:textSize="@dimen/abc_text_size_headline_material" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textview_main_title"
        android:layout_marginTop="15dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_spotify_streamer"
                style="@style/AppButtonStyle"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/spotify_streamer" />

            <Button
                android:id="@+id/button_scores_app"
                style="@style/AppButtonStyle"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/button_spotify_streamer"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/scores_app" />

            <Button
                android:id="@+id/button_library_app"
                style="@style/AppButtonStyle"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/button_scores_app"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/library_app" />

            <Button
                android:id="@+id/button_build_it_bigger"
                style="@style/AppButtonStyle"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/button_library_app"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/build_it_bigger" />

            <Button
                android:id="@+id/button_xyz_reader"
                style="@style/AppButtonStyle"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/button_build_it_bigger"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/xyz_reader" />

            <Button
                android:id="@+id/button_capstone"
                style="@style/AppButtonStyle"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/button_xyz_reader"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/capstone" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
